# VideoPipeline-detection

./: README.md  pyproject.toml
detect/core/: artifacts.py  run.py
